@@ -179,4 +179,19 @@ public class URISanitizerTest
     String result = sanitizer.apply( Visibility.PROTECTED, uri );
     assertEquals( "/2014/12/2[5-9]/*", result );
     }
+
+  @Test
+  public void testOpaqueURI()
+    {
+    String uri = "memory:driven.agent.driven.spark.SkewExampleTest.testSubmit(SkewExampleTest.scala:36)";
+    URISanitizer sanitizer = new URISanitizer();
+    String result = sanitizer.apply( Visibility.PRIVATE, uri );
+    assertEquals( "memory:driven.agent.driven.spark.SkewExampleTest.testSubmit(SkewExampleTest.scala:36)", result );
+
+    result = sanitizer.apply( Visibility.PROTECTED, uri );
+    assertEquals( "memory:", result );
+
+    result = sanitizer.apply( Visibility.PUBLIC, uri );
+    assertEquals( "memory:", result );
+    }
   }
